--- a/discussion/index.html
+++ b/discussion/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pokemon Battle</title>
   </head>
-  <body></body>
+  <body>
+    <script src="Main_Act.js"></script>
+  </body>
 </html>
